--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "markedjs-extra",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Markdown Extra Plugins for marked. Support footnotes, definitions, checkbox",
-  "main": "index.js",
+  "main": "markedjs_extra.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/xiaoliwang/markedjs-extra/issues"
   },
-  "homepage": "https://github.com/xiaoliwang/markedjs-extra#readme"
+  "homepage": "https://github.com/xiaoliwang/markedjs-extra#readme",
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0"
+  }
 }
